--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -9,6 +9,7 @@ html(data-ng-app='webApp')
 		link(rel='stylesheet', type='text/css', href='/css/bootstrap-theme.min.css')
 		link(rel='stylesheet', type='text/css', href='/css/alertify.core.css')
 		link(rel='stylesheet', type='text/css', href='/css/alertify.bootstrap.css')
+		link(rel='stylesheet', type='text/css', href='/css/custom.css')
 	body(data-ng-controller='WebCtrl')
 		.container
 			.row
