concatenating and creating source maps

--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -29,12 +29,10 @@ html(data-ng-app='blogApp')
 								td
 									a(href='mailto:{{user.email}}')
 										| {{user.email}}
+					div(angular-spec)
 
 		script(type='text/javascript', src='/js/jquery.min.js')
 		script(type='text/javascript', src='/js/bootstrap.min.js')
 		script(type='text/javascript', src='/js/angular.min.js')
 		script(type='text/javascript', src='/js/alertify.min.js')
-		script(type='text/javascript', src='/js/app.min.js')
-		script(type='text/javascript', src='/js/controllers.min.js')
-		script(type='text/javascript', src='/js/services.min.js')
-		script(type='text/javascript', src='/js/filters.min.js')
+		script(type='text/javascript', src='/js/blogApp.min.js')
