Incorporated karma for unit tests

--- a/src/client/less/custom.less
+++ b/src/client/less/custom.less
@@ -1,6 +1,11 @@
 @nice-blue: #5b83ad;
 @light-blue: @nice-blue + #111;
+@urgent: #EE3322;
 
 h1 {
 	color: @light-blue;
+}
+
+.important {
+	color: @urgent;
 }
