--- a/src/server/views/blog.jade
+++ b/src/server/views/blog.jade
@@ -1,1 +1,4 @@
-h1 Blog: {{blogMessage}}
+h1 All entries
+ul
+	li(data-ng-repeat='entry in entries')
+		a(href=('/entry/{{entry.id}}')) {{entry.title}}
