pretty URLs without hashbang, catch-all middleware on server-side to enable refresh

--- a/src/server/views/entry.jade
+++ b/src/server/views/entry.jade
@@ -1,3 +1,6 @@
-h1 {{entry.title}}
-
-p {{entry.text}}
+.row
+	.col-xs-12
+		h1 {{entry.title}}
+		p {{entry.text}}
+		footer
+			a(href='/blog') back to entry list
