--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -2,6 +2,8 @@ doctype html
 
 html(data-ng-app='blogApp')
 	head
+		base(href='/')
+
 		title My first Node/Angular/Bower/Grunt app
 
 		meta(charset='utf-8')
