--- a/src/server/views/blog.jade
+++ b/src/server/views/blog.jade
@@ -1,4 +1,6 @@
-h1 All entries
-ul
-	li(data-ng-repeat='entry in entries')
-		a(href=('/entry/{{entry.id}}')) {{entry.title}}
+.row
+	.col-xs-12
+		h1 All entries
+		ul
+			li(data-ng-repeat='entry in entries')
+				a(href=('/entry/{{entry.id}}')) {{entry.title}}
