added test for controller with async service call

--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -2,6 +2,7 @@ doctype html
 
 html(data-ng-app='blogApp')
 	head
+		// important for Angular's HTML 5 mode
 		base(href='/')
 
 		title My first Node/Angular/Bower/Grunt app
