--- a/src/server/views/entry.jade
+++ b/src/server/views/entry.jade
@@ -1,15 +1,24 @@
 .row
 	.col-xs-12
+		// Entry heading
 		h1 {{entry.title}}
+
+		// Meta information
 		.author
 			| Written by 
 			a(href='mailto:{{entry.author.email') {{entry.author.name}}
 			|  at {{entry.createdAt | date: 'dd.MM.yyyy, HH:mm'}}
+		
+		// Actual entry content
 		p {{entry.text}}
+		
+		// Entry comments
+		.comments-section-title {{comments.length | numberOfComments}}
 		ul(data-ng-show='comments.length > 0')
 			li(data-ng-repeat='comment in comments')
 				a(href='mailto:{{comment.author.email}}') {{comment.author.name}}
 				|  ({{comment.createdAt | date: 'dd.MM.yyyy, HH:mm'}}):
 				p {{comment.text}}
+		
 		footer
 			a(href='/blog') back to entry list
