All-round nicer look

--- a/src/client/less/custom.less
+++ b/src/client/less/custom.less
@@ -1,10 +1,10 @@
-@nice-blue: #5b83ad;
-@light-blue: @nice-blue + #111;
+@heading-color: #881111;
 @light-grey: #777;
 @urgent: #EE3322;
 
 h1 {
-	color: @light-blue;
+	color: @heading-color;
+	margin-bottom: 20px;
 }
 
 .important {
@@ -14,4 +14,8 @@ h1 {
 .author {
 	color: @light-grey;
 	margin-bottom: 10px;
+}
+
+.credits-panel {
+	margin-top: 20px;
 }
