--- a/src/server/views/entry.jade
+++ b/src/server/views/entry.jade
@@ -13,7 +13,8 @@
 		p {{entry.text}}
 		
 		// Entry comments
-		.comments-section-title {{comments.length | numberOfComments}}
+		.comments-section-title
+			| {{comments.length | numberOfComments}}
 		ul(data-ng-show='comments.length > 0')
 			li(data-ng-repeat='comment in comments')
 				a(href='mailto:{{comment.author.email}}') {{comment.author.name}}
