--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,6 @@
 h1 {
-  color: #6c94be;
+  color: #881111;
+  margin-bottom: 20px;
 }
 .important {
   color: #ee3322;
@@ -7,4 +8,7 @@ h1 {
 .author {
   color: #777777;
   margin-bottom: 10px;
+}
+.credits-panel {
+  margin-top: 20px;
 }
