Arrow in back link

--- a/src/server/views/entry.jade
+++ b/src/server/views/entry.jade
@@ -22,4 +22,6 @@
 				p {{comment.text}}
 		
 		footer
-			a(href='/blog') back to entry list
+			a(href='/blog')
+				span.glyphicon.glyphicon-circle-arrow-left
+				| &nbsp;back to entry list
