made animation slightly smoother

--- a/src/client/less/custom.less
+++ b/src/client/less/custom.less
@@ -22,9 +22,10 @@ h1 {
 
 .slide-animation.ng-enter {
 	transition: 0.5s linear all;
-	opacity: 0;
+	opacity: 0.2;
 }
 
 .slide-animation.ng-enter-active {
+	transition: 0.5s linear all;
 	opacity: 1;
 }
